--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "@types/react": "^18.2.71",
     "@types/react-dom": "^18.2.22",
     "autoprefixer": "^10.4.19",
-    "axios": "^1.6.8",
-    "classnames": "^2.5.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,8 +23,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
